# synquid-rs

./: .gitmodules  Cargo.toml  flake.nix  notes.md  test.sq  todo.md
.github/workflows/: build_nix.yml  ci.yml  fuzz.yml
examples/demo/: NNF.sq  oracle
src/: data.rs  error.rs  explorer.rs  lib.rs  parser.rs  pretty.rs  resolver.rs  smt.rs  synthesizer.rs  tokens.rs  type_constraint_solver.rs  util.rs
src/logic/: formula.rs  mod.rs  qual.rs  sort.rs
src/program/: env.rs  mod.rs
src/solver/: horn.rs  mod.rs
src/solver/fixpoint/: greatest.rs  least.rs  mod.rs
src/type/: base.rs  mod.rs  schema.rs  skeleton.rs
tree-sitter/: flake.nix
